--- a/style.css
+++ b/style.css
@@ -1,8 +1,64 @@
-.body{
+body{
     display: flex;
     flex-direction: column;
 }
 
-.header{
-    display: flex;
+a{
+color: black;
+text-decoration: none;
+color: #e5e7eb;
+
 }
+
+button{
+ background-color: #3882F6; 
+ color: #e5e7eb;
+ border-radius: 8px;
+ border: none;
+ padding: 10px 24px;
+ font-size: 16px;
+}
+
+.header{
+    background-color: #1F2937;
+    color: #e5e7eb;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    
+    
+    
+}
+
+.top-page{
+    display: flex;
+    gap: 2rem;
+    justify-content: space-between;
+    margin-left: 130px;
+    margin-right: 130px;
+}
+
+.top-page-second{
+    display: flex;
+    height: auto;
+    width: auto;
+    justify-content: space-between;
+    padding: 30px;
+    margin: 100px;
+    
+    
+}
+
+.link{
+    display: flex;
+    gap: 2rem;
+    padding: 10px;
+    align-items: center;
+    
+}
+
+#header-content{
+    height: 300px;
+    width:300px;
+}
+
