--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 body{
+
     display: flex;
     flex-direction: column;
     margin: 0;
+    flex: 1;
 }
 
 a{
+
 color: black;
 text-decoration: none;
 color: #e5e7eb;
-
 }
 
 img{
-border: 2px solid black;
-border-radius: 25px;
 
+border-radius: 25px;
 
 }
 
@@ -29,38 +30,52 @@ button{
 
 
 
+/* */
+/* */
+    /* Header styling */
+/* */
+/* */
+
+
 .header{
+
     background-color: #1F2937;
     color: #e5e7eb;
     margin: 0;
     display: flex;
     flex-direction: column;
-    flex: 1;
-    
-    
+    flex-wrap: wrap;
     
 }
 
 .top-page{
+
     display: flex;
     gap: 2rem;
     justify-content: space-between;
     margin-left: 130px;
     margin-right: 130px;
+    
 }
 
 .top-page-second{
+
     display: flex;
     height: auto;
     width: auto;
     justify-content: space-between;
     padding: 30px;
-    margin: 200px;
+    margin: 210px;
+    margin-left: 300px;
+    margin-right: 300px;
+    gap: 8rem;
+
     
     
 }
 
 .link{
+
     display: flex;
     gap: 2rem;
     padding: 10px;
@@ -69,41 +84,116 @@ button{
 }
 
 #header-content{
+
     height: 300px;
     width:300px;
 }
 
+.header img{
+
+    width: 600px;
+    height: auto;
+}
+
+#site-name{
+    font-size: 36px;
+    font-weight: bold;
+
+}
+
+/* */
+/* */
+    /* Info styling*/
+/* */
+/* */
+
+
 .info{
     
     text-align: center;
-   
+    margin-bottom: 20px;
 }
-
 
 .square{
-    display: flex;
-    gap: 2rem;
-    
 
+    display: flex;
+    gap: 5rem;
+    justify-content: center;
 }
 
-.citation{
+.square img{
+
+    width: 300px;
+    height: 300px;
+    border: 3px solid #3882F6;
+}
+
+.square p{
+
+    width: 300px;
+    font-weight: bold;
+}
+
+.info h2{
+
+    font-size: 36px;
+    font-weight: bold;
+    color: #1F2937;
+}
+
+
+/* */
+/* */
+    /* quote styling */
+/* */
+/* */
+
+
+.quote{
+
  background-color: #E5E7EB;
  display: flex;
  flex-direction: column;
- text-align: center;
+ padding: 20px;
+ align-items: center;
  
 }
 
+#text-quote{
+
+text-align: center;
+padding-top: 30px;
+font-size: 20px;
+font-weight: italic;
+color: #1F2937;
+
+}
+
+#text-name{
+
+    font-weight: bold;
+    margin-left: 900px;
+    font-size: 18px;
+}
+
+/* */
+/* */
+    /* Notification styling */
+/* */
+/* */
+
+
 .notification{
+
 background-color: #3882F6;
 color:#E5E7EB;
+font-size: 17px;
 border: 1px solid #3882F6;
 border-radius: 12px;
 padding: 10px;
 margin: 75px;
-margin-left: 100px;
-margin-right: 100px;
+margin-left: 200px;
+margin-right: 200px;
 display: flex;
 justify-content: space-between;
 padding: 10px;
@@ -111,9 +201,32 @@ padding-left: 100px;
 padding-right: 100px;
 }
 
+.notification button{
+
+    border: 2px solid #E5E7EB;
+    font-weight: bold;
+    font-size: 20px;
+    
+   
+}
+
+
+
+
+/* */
+/* */
+    /* Footer styling */
+/* */
+/* */
+
+
 .footer{
+
 background-color: #1F2937;
 color: #E5E7EB;
 text-align: center;
+
 }
+
+
 
